# medguard-cxr

./: .gitignore  CONTINUATION_PLAN.md  DECISIONS.md  Dockerfile  MEDGUARD_COLAB_GIT_ONLY.py  MEDGUARD_MASTER_PROMPT.md  Makefile  README.md  RELEASE_NOTES.md  datasheet.md  model_card.md  pyproject.toml
.github/workflows/: ci.yml
app/: gradio_demo.py
calibrators/: nih_temp_scaling.json  nih_temp_scaling.pkl
configs/: api.yaml  baseline_nih.yaml  calibration.yaml  grounding_rsna.yaml  grounding_vindr.yaml  ood.yaml  vlm_lora.yaml
data/: README.md  sample_manifest.csv
docs/: data_audit.md  gradcam_visual_audit.md
notebooks/: 01_dataset_audit.ipynb  02_baseline_results.ipynb  03_error_analysis.ipynb
report/: README.md  main.tex  references.bib
report/sections/: 01_introduction.tex  02_datasets.tex  03_methodology.tex  05_experiments.tex  (+4 more)
results/: baseline_nih_eval.json  baseline_nih_train.json  calibration_report.json  grounding_rsna_eval.json  vlm_lora_train.json  vlm_zero_shot_eval.json
scripts/: calibrate.py  evaluate.py  evaluate_grounding.py  evaluate_vlm.py  generate_synthetic_overlays.py  generate_vqa_dataset.py  launch_demo.py  prepare_nih.py  prepare_rsna.py  prepare_vindr.py  train_classifier.py  train_vlm_lora.py
tests/: test_abstention.py  test_api_contract.py  test_calibrate_script.py  test_calibration.py  test_calibration_metrics.py  test_dataloader.py  test_gradcam.py  test_gradio_demo.py  test_imports.py  test_localization_metrics.py  test_model_shapes.py  test_ood.py  test_overlays.py  test_question_filter.py  test_rsna_dataset.py  test_vindr_dataset.py  test_vlm_classifier_consistency.py  test_vlm_lora_training.py  test_vlm_output_schema.py  test_vqa_dataset_generator.py  test_vqa_rule_based.py  test_vqa_safety.py
(+33 files in other folders)
